# visualsprint-agent

./: .dockerignore  .env.example  .gitignore  DELETE-PR-6-SUPPORT-REQUEST.txt  LICENSE  README.md  deploy.sh  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  deploy-cloud-run.yml
apps/web/: .env.example  Dockerfile  FRONTEND.md  next.config.ts  package.json
docs/: ACTION_AGENT_SETUP.md  DEPLOY.md  README.md  REAL_CAPTURE_PIPELINE.md  REMAINING_TASKS.md  UX_UI_IMPROVEMENT_PLAN.md  agent-builder-setup.md  agent-creation-chatgpt-prompts.md  capture-constraints-and-plan.md  development.md  elastic-integration-handoff.md  fixes.md  google-cloud-agent-builder.md
infra/cloud-run/: README.md  deploy-visualsprint.ps1  visualsprint-agents.service.yaml  visualsprint-api.service.yaml
services/agents/: Dockerfile  README.md  pyproject.toml
services/agents/scripts/: redeploy_vertex_agents.py  run_eval_smoke.py
services/agents/tests/: conftest.py  test_action_agent.py  test_agents_api.py  test_engine_wrappers.py  test_persistence_tools.py  test_reasoning_summary_agent.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/tests/: conftest.py  test_api.py  test_elastic_integration.py
services/ingest/: Dockerfile  README.md  pyproject.toml
services/ingest/tests/: conftest.py  test_ingest_api.py
services/media/: Dockerfile  README.md  pyproject.toml
services/media/src/visualsprint_media/: __init__.py  config.py  main.py  models.py  pipeline.py
services/media/tests/: conftest.py  test_media_api.py
(+153 files in other folders)
