[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualsprint-media"
version = "0.1.0"
description = "Deterministic media service shell for the VisualSprint platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "google-cloud-storage==2.18.2",
  "google-genai==0.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
